# wavesim_py

./: .gitignore  .readthedocs.yaml  20230303_wrap_solution.py  LICENSE  README.md  anysim.py  anysim_all.py  anysim_base.py  anysim_cluster.yml  anysim_combined.py  anysim_combined2.py  anysim_main.py  anysim_matlab.py  anysim_separate.py  anysim_small_circ_prob.py  anysim_trial.py  anysim_wrap.py  anysim_wvsim_like.py  env.yml  environment.yml  helmholtz_base.py  helmholtzbase.py  ipynb2slides_guide.md  mem_snapshot.py  my.sbatch  preprocess.py  pyproject.toml  pyproject_cpu.toml  pytest.ini  requirements.txt  run_anysim.py  run_anysim_combined.py  run_anysim_combined2.py  run_example.py  save_details.py  setting_up_conda.md  state.py  test_anysim.py  test_examples.py  test_inputShapeDType.py  (+5 more)
docs/: conf.py  index.rst  make.bat  tex.bat
docs/source/: acknowledgements.rst  api.rst  api_domain.rst  api_helmholtzdomain.rst  api_iteration.rst  api_maxwelldomain.rst  api_multidomain.rst  api_simulate.rst  api_utilities.rst  api_wrapcorrecteddomain.rst  conclusion.rst  conf.py  development.rst  index.rst  index_latex.rst  index_markdown.rst  layers_api.rst  readme.rst  references.bib
examples/: README.rst  __init__.py  boundary_approximation.py  check_mem.py  helmholtz_1d.py  helmholtz_1d_analytical.py  helmholtz_1d_create_medium.py  helmholtz_2d.py  helmholtz_2d_homogeneous.py  helmholtz_2d_low_contrast.py  helmholtz_3d_advanced.py  helmholtz_3d_create_source.py  helmholtz_3d_disordered.py  helmholtz_3d_homogeneous.py  helmholtz_3d_import_lens.py  helmholtz_analytical.py  helmholtz_simulate.py  maxwell_2d.py  maxwell_2d_create_medium.py  maxwell_mie.py  maxwell_simulate.py  mem_snapshot.py  my.sbatch  run_example.py  run_example_gpu_memory.py  test_lens.mat  timing_test.py
examples/paper_code/: __init__.py  fig1_ri.py  fig1_splitting.py  fig2_decompose.py  fig2_splitting.py  fig3_correction_matrix.py  fig3_decompose.py  fig4_correction_matrix.py  fig4_truncate.py  fig5_dd_validation.py  fig5_truncate.py  fig6_dd_truncation.py  fig6_dd_validation.py  fig7_dd_convergence.py  fig7_dd_truncation.py  fig8_dd_convergence.py  fig8_dd_large_simulation.py  fig9_dd_large_simulation.py  ri_fig5_dd_validation.py
examples/paper_data/: fig6_dd_truncation.npz  fig7_dd_convergence.txt
examples/wavesim_mat_to_py/: README.rst  helmholtz_1d.py  helmholtz_2d_high_contrast.py  helmholtz_2d_low_contrast.py  helmholtz_3d_disordered.py  maxwell_2d.py  maxwell_mie.py
guides/: ipynb2slides_guide.md  misc_tips.md  pytorch_gpu_setup.md  setting_up_gpu_w_pytorch.md
old/: test_corrections.py  test_examples.py  test_inputs.py  test_v_contraction.py
setting_up/: Miniconda3-latest-Linux-x86_64.sh.REMOVED.git-id  anysim_cluster.yml
src/wavesim/: domain.py  helmholtzdomain.py  wrapcorrecteddomain.py
src/wavesim/engine/: dispatcher.py  index_utils.py
src/wavesim/utilities/: __init__.py  create_medium.py  create_source.py  plotting.py  utilities.py
tests/: __init__.py  test_L_plus1_inv.py  test_accretivity.py  test_analytical.py  test_basics.py  test_corrections.py  test_domain_decomposition.py  test_engine.py  test_examples.py  test_inputs.py  test_maxwell.py  test_operators.py  test_plotting.py  test_precon_op_spec_radius.py  test_simulate.py  test_utilities.py  test_v_contraction.py
wavesim/: __init__.py  domain.py  helmholtzdomain.py  iteration.py  maxwelldomain.py  multidomain.py  simulate.py  utilities.py
wavesim/engine/: __init__.py  array.py  blockarray.py  constantarray.py  cupyarray.py  functions.py  numpyarray.py  sparsearray.py
wavesim/utilities/: __init__.py  create_medium.py  utilities.py
