[project]
name = "wavesim"
version = "0.1.0a2"
description = "A library for simulating wave propagation using the modified Born series"
authors = [ {name = "Ivo Vellekoop", email = "i.m.vellekoop@utwente.nl"}, 
            {name = "Swapnil Mache", email = "s.mache@utwente.nl"} ]
readme = "README.md"
repository = "https://github.com/IvoVellekoop/wavesim_py"
documentation = "https://wavesim.readthedocs.io/en/latest/"
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy<2.0.0",
    "matplotlib>=3.9.1",
    "scipy>=1.14.0",
    "porespy",
    "scikit-image<0.23",
    "torch"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
torch = { source = "pytorch-gpu" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.1.2"
sphinx_mdinclude = ">= 0.5.0"
sphinx-rtd-theme = ">= 2.0.0"
sphinx-autodoc-typehints = ">= 1.11.0"
sphinxcontrib-bibtex = ">= 2.6.0"
sphinx-markdown-builder = ">= 0.6.6"
sphinx-gallery = ">= 0.15.0"
